hero image template no longer overlaps menus

--- a/rtl.css
+++ b/rtl.css
@@ -1219,7 +1219,7 @@ a img {
     max-height: none;
     overflow: visible;
     position: absolute;
-    z-index: 9;
+    z-index: 29;
     top: calc(100% + 12px);
     opacity: 0;
     visibility: hidden;
@@ -1428,7 +1428,7 @@ a img {
     max-height: none;
     overflow: visible;
     position: absolute;
-    z-index: 9;
+    z-index: 29;
     top: calc(100% + 12px);
     opacity: 0;
     visibility: hidden;
