--- a/sass/_menu.scss
+++ b/sass/_menu.scss
@@ -202,7 +202,7 @@
       max-height: none;
       overflow: visible;
       position: absolute;
-      z-index: 9;
+      z-index: 29;
       top: calc(100% + 12px);
       opacity: 0;
       visibility: hidden;
